--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sasha Aickin",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-plugin-transform-node-env-inline": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.4.0",
     "babel-plugin-transform-react-inline-elements": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
